[gd_scene load_steps=9 format=2]

[ext_resource path="res://UI/icon.png" type="Texture" id=1]
[ext_resource path="res://src/Player/Player.gd" type="Script" id=2]

[sub_resource type="CapsuleShape" id=1]
radius = 0.5

[sub_resource type="SpatialMaterial" id=4]
albedo_texture = ExtResource( 1 )

[sub_resource type="CapsuleMesh" id=2]
material = SubResource( 4 )
radius = 0.5

[sub_resource type="CubeMesh" id=3]
size = Vector3( 0.2, 0.2, 1 )

[sub_resource type="CubeMesh" id=5]
size = Vector3( 5, 0.2, 1.5 )

[sub_resource type="CubeMesh" id=6]
size = Vector3( 0.794, 0.378, 4.482 )

[node name="PlayerCharacter" type="KinematicBody"]
script = ExtResource( 2 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -1.62921e-07, 1, 0, -1, -1.62921e-07, 0, 1, 0 )
shape = SubResource( 1 )

[node name="PlayerMesh" type="Spatial" parent="."]

[node name="MeshInstance" type="MeshInstance" parent="PlayerMesh"]
transform = Transform( 1, 0, 0, 0, -1.62921e-07, 1, 0, -1, -1.62921e-07, 0, 1, 0 )
mesh = SubResource( 2 )
material/0 = null

[node name="MeshInstance2" type="MeshInstance" parent="PlayerMesh"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.29582, -0.895017 )
mesh = SubResource( 3 )
material/0 = null

[node name="GoosePlaceholder" type="Spatial" parent="PlayerMesh"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.44408, 0 )

[node name="GooseWings" type="MeshInstance" parent="PlayerMesh/GoosePlaceholder"]
mesh = SubResource( 5 )
material/0 = null

[node name="GooseBody" type="MeshInstance" parent="PlayerMesh/GoosePlaceholder"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.735144 )
mesh = SubResource( 6 )
material/0 = null

[node name="GimbalX" type="Spatial" parent="."]

[node name="GimbalY" type="Spatial" parent="GimbalX"]

[node name="CameraPosition" type="Spatial" parent="GimbalX/GimbalY"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.70055, 5.40486 )

[node name="Camera" type="Camera" parent="GimbalX/GimbalY/CameraPosition"]
far = 1000.0
